src/components/Sidebar/Sidebar.css
.sidebar__profile {
  position: fixed;
  top: 0;
  right: 0;
  width: 100vw;
  height: 100vh;
  backdrop-filter: blur(6px);
  transition: 500ms ease-in-out;
}

.sidebar__profile_hidden {
  right: -100vw;
}

.sidebar__profile-button-wrapper > button {
  background-color: rgba(0, 0, 0, 0);
  border: none;
  cursor: pointer;
}

.sidebar__profile img {
  margin: 50px 0;
  width: 100px;
  height: 100px;
  border-radius: 50%;
  object-fit: cover;
}
.sidebar__profile ul {
  margin-top: 20px;
  list-style: none;
}

.sidebar__profile li {
  color: black;
  text-align: left;
  line-height: 3;
  font-size: 18px;
  text-align: center;
}

.sidebar__profile-name {
  color: black;
  font-weight: 500;
}

/* .sidebar__profile a:hover {
    cursor: pointer;
    color: grey;
  } */

.sidebar__profile-link {
  position: relative;
  cursor: pointer;
}

.sidebar__profile-link:after {
  content: '';
  width: 0%;
  transition: 200ms ease-in-out;
}

.sidebar__profile-link:hover::after {
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  height: 2px;
  background-color: var(--dark-background);
  transition: 200ms ease-in-out;
}

.sidebar__container {
  width: 300px;
  position: absolute;
  right: 0;
  top: 0;
  height: 100vh;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.sidebar__close-button {
  position: absolute;
  top: 0;
  left: 0;
  color: var(--dark-background);
  background-color: white;
  border: none;
  width: 100px;
  height: 60px;
  font-size: 18px;
  transform: translateX(-80px);
  border-radius: 10px;
  transition: 240ms;
}

.sidebar__close-button:hover {
  cursor: pointer;
  color: grey;
}

@media (max-width: 768px) {
  .sidebar__profile-name {
    margin-top: -20px;
    color: black;
  }
}

@media (max-width: 640px) {
  .sidebar__profile-name {
    display: none;
  }
}

